feat: Version completa del login y register, ademas de correccion del proyecto en general, se eliminaron archivos hardcodeados y se corrigieron las rutas

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   fl_chart: ^0.68.0
+  shared_preferences: ^2.2.2
 
   # UI
   cupertino_icons: ^1.0.8
