--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   fl_chart: ^0.68.0
   shared_preferences: ^2.2.2
+  image_picker: ^1.0.7
+
 
   # UI
   cupertino_icons: ^1.0.8
