--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   http: ^1.5.0
   flutter_bloc: ^9.1.1
   bloc: ^9.1.0
+  stomp_dart_client: ^2.0.0
+  web_socket_channel: ^3.0.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
